opam-version: "2.0"
name: "owee"
version: "0.3"
synopsis: "OCaml library to work with DWARF format"
maintainer: "Frédéric Bour <frederic.bour@lakaban.net>"
authors: "Frédéric Bour <frederic.bour@lakaban.net>"
homepage: "https://github.com/let-def/owee"
bug-reports: "https://github.com/let-def/owee"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml-base-compiler" {>= "4.07"} |
  "ocaml-variants" {>= "4.07" } |
  "ocaml-system" {>= "4.07"}
  "dune" {build & >= "1.2"}
]
